[package]
name = "autoredshift"
version = "0.2.0"
edition = "2021"
description = "A tool to automatically adjust screen temperature based on a custom curve."
license = "MIT"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
directories = "5.0"
eframe = "0.29"
egui = "0.29"
egui_plot = "0.29"
splines = { version = "4.3", features = ["serde"] }
anyhow = "1.0.100"
